// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeField should render a loading state 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time."
            id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
            values={Object {}}
          />
        </p>
        <p>
          <FormattedMessage
            defaultMessage="You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="indexPatternManagement.createIndexPattern.stepTime.fieldWarningLabel"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        gutterSize="xs"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="indexPatternManagement.createIndexPattern.stepTime.fieldHeader"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiLoadingSpinner
            size="s"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={true}
      name="timeField"
      options={
        Array [
          Object {
            "text": "Loading…",
            "value": "",
          },
        ]
      }
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render a selected time field 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time."
            id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
            values={Object {}}
          />
        </p>
        <p>
          <FormattedMessage
            defaultMessage="You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="indexPatternManagement.createIndexPattern.stepTime.fieldWarningLabel"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        gutterSize="xs"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="indexPatternManagement.createIndexPattern.stepTime.fieldHeader"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiLink
            className="timeFieldRefreshButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Refresh"
              id="indexPatternManagement.createIndexPattern.stepTime.refreshButton"
              values={Object {}}
            />
          </EuiLink>
        </EuiFlexItem>
      </EuiFlexGroup>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value="@timestamp"
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render normally 1`] = `
<EuiForm>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    helpText={
      <div>
        <p>
          <FormattedMessage
            defaultMessage="The Time Filter will use this field to filter your data by time."
            id="indexPatternManagement.createIndexPattern.stepTime.fieldLabel"
            values={Object {}}
          />
        </p>
        <p>
          <FormattedMessage
            defaultMessage="You can choose not to have a time field, but you will not be able to narrow down your data by a time range."
            id="indexPatternManagement.createIndexPattern.stepTime.fieldWarningLabel"
            values={Object {}}
          />
        </p>
      </div>
    }
    label={
      <EuiFlexGroup
        alignItems="center"
        gutterSize="xs"
        justifyContent="spaceBetween"
      >
        <EuiFlexItem
          grow={false}
        >
          <span>
            <FormattedMessage
              defaultMessage="Time Filter field name"
              id="indexPatternManagement.createIndexPattern.stepTime.fieldHeader"
              values={Object {}}
            />
          </span>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiLink
            className="timeFieldRefreshButton"
            onClick={[Function]}
          >
            <FormattedMessage
              defaultMessage="Refresh"
              id="indexPatternManagement.createIndexPattern.stepTime.refreshButton"
              values={Object {}}
            />
          </EuiLink>
        </EuiFlexItem>
      </EuiFlexGroup>
    }
    labelType="label"
  >
    <EuiSelect
      data-test-subj="createIndexPatternTimeFieldSelect"
      disabled={false}
      isLoading={false}
      name="timeField"
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "@timestamp",
            "value": "@timestamp",
          },
        ]
      }
      value=""
    />
  </EuiFormRow>
</EuiForm>
`;

exports[`TimeField should render something if hiding time field 1`] = `
<EuiForm>
  <EuiText>
    <p>
      <FormattedMessage
        defaultMessage="The indices which match this index pattern don't contain any time fields."
        id="indexPatternManagement.createIndexPattern.stepTime.field.noTimeFieldsLabel"
        values={Object {}}
      />
    </p>
  </EuiText>
</EuiForm>
`;
